[package]
name = "monofs"
version = "0.2.1"
description = "`monofs` is an immutable distributed file system."
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/microsandbox/monobase"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "monofs"
path = "lib/lib.rs"

[[bin]]
name = "monofs"
path = "bin/monofs.rs"

[[bin]]
name = "mfsrun"
path = "bin/mfsrun.rs"

[dependencies]
ipldstore = { git = "https://github.com/microsandbox/ipldstore", package = "ipldstore" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
getset = "0.1"
async-once-cell = "0.5.4"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0"
futures = "0.3"
typed-path = "0.10"
bytes = "1.9"
aliasable = "0.1.3"
serde_json = "1.0"
microsandbox-utils = { git = "https://github.com/microsandbox/microsandbox", branch = "main" }
serde_ipld_dagcbor = "0.6"
pretty-error-debug = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
nfsserve = "0.10"
intaglio = "1.10"
hex = "0.4"
tempfile = "3.15"
clap = { version = "4.5", features = ["color", "derive"] }
pin-project-lite = "0.2.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
nix = "0.29"
typed-builder = "0.21"
async-recursion = "1.1"

[dev-dependencies]
test-log = "0.2"
gag = "1.0"
os_pipe = "1.1"
